# xChange

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: api_build.yml  engine_build.yml  mm_build.yml  notif_worker.yml
crates/add_one/src/: lib.rs
crates/adder/src/: main.rs
crates/api/: Cargo.toml  Readme.md  diesel.toml
crates/api/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/api/migrations/2024-07-25-043432_change_created_not_null/: down.sql
crates/api/migrations/2024-07-25-064300_delete_post/: down.sql
crates/api/migrations/2024-07-26-124549_hash_pass/: down.sql  up.sql
crates/api/migrations/2024-07-27-100150_hash_pass/: up.sql
crates/api/migrations/2024-07-28-114625_add_verify_email/: down.sql  up.sql
crates/api/src/: main.rs  models.rs  redis.rs  schema.rs
crates/api/src/auth/: middleware.rs  mod.rs  utils.rs
crates/api/src/db/: mod.rs  user_db_fn.rs
crates/api/src/kafka/: mod.rs
crates/api/src/middlewares/: check_verify.rs  extract_client_id.rs  mod.rs  rate_limit.rs  un_verify_user.rs  verify_user.rs
crates/api/src/route/: order.rs  user.rs
crates/api/src/types/: mod.rs
crates/common/: Cargo.toml  Readme.md
crates/common/src/: lib.rs  redis.rs
crates/common/src/types/: mod.rs  order.rs  user.rs
crates/common/src/utils/: mod.rs
crates/db/: Cargo.toml  Readme.md  diesel.toml
crates/db/migrations/2024-07-25-034237_users/: up.sql
crates/db/migrations/2024-07-25-043432_change_created_not_null/: up.sql
crates/db/migrations/2024-07-25-064300_delete_post/: up.sql
crates/db/migrations/2024-07-27-100150_hash_pass/: down.sql
crates/db/migrations/2024-08-27-140204_kyc_user/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/db/src/fns/: mod.rs  user_db_fn.rs
crates/engine/: Cargo.toml  snapshot.json
crates/engine/src/: main.rs  process.rs
crates/engine/src/trade/: engine.rs  orderbook.rs
crates/engine/src/types/: mod.rs
crates/engine/src/utils/: mod.rs
crates/market_maker/: Cargo.toml
crates/market_maker/src/: api_client.rs  main.rs  mm.rs
crates/notif_worker/: Cargo.toml  Readme.md
crates/notif_worker/src/: main.rs
crates/notif_worker/src/constants/: mod.rs
crates/notif_worker/src/process/: mod.rs  processes.rs
crates/notif_worker/src/types/: mod.rs
crates/notif_worker/src/utils/: lib.rs  mod.rs
docker/api/: Dockerfile
docker/db/: docker-compose.yml  init-db.sh
docker/engine/: Dockerfile
docker/mm/: Dockerfile
docker/notif_worker/: Dockerfile
docker/service/: docker-compose.yml
