[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
env_logger = "0.11.4"
lazy_static = "1.5.0"
log = "0.4.22"
num_cpus = "1.16.0"
serde_json = "1.0.120"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
dotenvy = "0.15"
actix-rt = "2.10.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
futures = "0.3.30"
r2d2 = "0.8.10"
jwt = "0.16.0"
jsonwebtoken = "9.3.0"
actix-service = "2.0.2"
futures-util = "0.3.30"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"
password-hash = "0.5.0"
tokio = "1.39.1"
redis = "0.26.0"
deadpool-redis = "0.15.1"
r2d2_redis = "0.14.0"
