[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.120"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
dotenvy = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
r2d2_redis = "0.14.0"
