[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
common = {path = "../common"}
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
reqwest = { version = "0.12.5",  features = ["blocking", "json"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
